--- a/AnimeSite/Views/LayoutPartial/_FooterPartial.cshtml
+++ b/AnimeSite/Views/LayoutPartial/_FooterPartial.cshtml
@@ -21,7 +21,7 @@
             </div>
             <div class="col-lg-3">
                 <p>
-                    Copyright &copy;<script>document.write(new Date().getFullYear());</script> Tüm Hakları Saklıdır <i class="fa fa-heart" aria-hidden="true"></i>
+                    Copyright &copy;<script>document.write(new Date().getFullYear());</script> Tüm Hakları Saklıdır
             </div>
         </div>
     </div>
