anime detail sayfası

--- a/AnimeSite/Views/LayoutPartial/_NavbarPartial.cshtml
+++ b/AnimeSite/Views/LayoutPartial/_NavbarPartial.cshtml
@@ -12,19 +12,9 @@
                 <div class="header__nav">
                     <nav class="header__menu mobile-menu">
                         <ul>
-                            <li class="active"><a href="/Dashboard/Index/">Ana Sayfa</a></li>
-                            <li>
-                                <a href="~/anime-main/categories.html">Kategoriler <span class="arrow_carrot-down"></span></a>
-                                <ul class="dropdown">
-                                    <li><a href="~/anime-main/categories.html">Kategoriler</a></li>
-                                    <li><a href="~/anime-main/anime-details.html">Anime Detayları</a></li>
-                                    <li><a href="~/anime-main/anime-watching.html">Anime İzle</a></li>
-                                    <li><a href="~/anime-main/blog-details.html">Blog</a></li>
-                                    <li><a href="~/anime-main/signup.html">Kayıt Ol</a></li>
-                                    <li><a href="~/anime-main/login.html">Giriş Yap</a></li>
-                                </ul>
-                            </li>
-                            <li><a href="~/anime-main/blog.html">Forum</a></li>
+                            <li><a href="/Dashboard/Index/">Ana Sayfa</a></li>
+                            <li><a href="/Anime/AnimeList/">Animeler</a></li>
+                            <li><a href="#">Forum</a></li>
                             <li><a href="#">İletişim</a></li>
                         </ul>
                     </nav>
