--- a/AnimeSite/Views/Anime/AnimeList.cshtml
+++ b/AnimeSite/Views/Anime/AnimeList.cshtml
@@ -41,17 +41,16 @@
                         {                           
                         <div class="col-lg-4 col-md-6 col-sm-6">
                             <div class="product__item">
+                                <a href="/Anime/AnimeDetail/@item.AnimeID">
                                 <div class="product__item__pic set-bg" data-setbg="@item.Image1">
-                                    <div class="ep">18 / 18</div>
-                                    <div class="comment"><i class="fa fa-comments"></i> 11</div>
-                                    <div class="view"><i class="fa fa-eye"></i> 9141</div>
-                                </div>
+                                        </div>
+                                    </a>
                                 <div class="product__item__text">
                                     <ul>
                                         <li>Active</li>
                                         <li>Movie</li>
                                     </ul>
-                                    <h5><a href="#">@item.Name</a></h5>
+                                    <h5><a href="/Anime/AnimeDetail/@item.AnimeID">@item.Name</a></h5>
                                 </div>
                             </div>
                         </div>
