--- a/AnimeSite/Views/Dashboard/Index.cshtml
+++ b/AnimeSite/Views/Dashboard/Index.cshtml
@@ -49,10 +49,6 @@
 </section>
  <br />
 
-
- @* Bu Kısım View Componentler İle Ayrılacak *@
-
-
 <section class="product spad">
     <div class="container">
         <div class="row">
@@ -61,7 +57,7 @@
                     <div class="row">
                         <div class="col-lg-8 col-md-8 col-sm-8">
                             <div class="section-title">
-                                <h4>Trendler</h4>
+                                <h4>Son Çıkanlar</h4>
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-4 col-sm-4">
@@ -122,55 +118,18 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-4 col-md-6 col-sm-8">
-                <div class="product__sidebar">
-                    <div class="product__sidebar__view">
-                        <div class="section-title">
-                            <h5>Çok İzlenenler</h5>
-                        </div>
-                        <ul class="filter__controls">
-                            <li class="active" data-filter="*">Gün</li>
-                            <li data-filter=".week">Hafta</li>
-                            <li data-filter=".month">Ay</li>
-                            <li data-filter=".years">Yıl</li>
-                        </ul>
-                        <div class="filter__gallery">
-                            <div class="product__sidebar__view__item set-bg mix day years"
-                                 data-setbg="/anime-main/img/sidebar/tv-1.jpg">
-                                <div class="ep">18 / ?</div>
-                                <div class="view"><i class="fa fa-eye"></i> 9141</div>
-                                <h5><a href="#">Boruto: Naruto next generations</a></h5>
-                            </div>
-                            <div class="product__sidebar__view__item set-bg mix month week"
-                                 data-setbg="/anime-main/img/sidebar/tv-2.jpg">
-                                <div class="ep">18 / ?</div>
-                                <div class="view"><i class="fa fa-eye"></i> 9141</div>
-                                <h5><a href="#">The Seven Deadly Sins: Wrath of the Gods</a></h5>
-                            </div>
-                            <div class="product__sidebar__view__item set-bg mix week years"
-                                 data-setbg="/anime-main/img/sidebar/tv-3.jpg">
-                                <div class="ep">18 / ?</div>
-                                <div class="view"><i class="fa fa-eye"></i> 9141</div>
-                                <h5><a href="#">Sword art online alicization war of underworld</a></h5>
-                            </div>
-                            <div class="product__sidebar__view__item set-bg mix years month"
-                                 data-setbg="/anime-main/img/sidebar/tv-4.jpg">
-                                <div class="ep">18 / ?</div>
-                                <div class="view"><i class="fa fa-eye"></i> 9141</div>
-                                <h5><a href="#">Fate/stay night: Heaven's Feel I. presage flower</a></h5>
-                            </div>
-                            <div class="product__sidebar__view__item set-bg mix day"
-                                 data-setbg="/anime-main/img/sidebar/tv-5.jpg">
-                                <div class="ep">18 / ?</div>
-                                <div class="view"><i class="fa fa-eye"></i> 9141</div>
-                                <h5><a href="#">Fate stay night unlimited blade works</a></h5>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            </div>
-            </div>
-            </section>
+
+
+
+
+
+            
+           
+            @await Component.InvokeAsync("_CategoryList");
+
+
+         </div>
+    </div>
+</section>
 
 
