--- a/AnimeSite/Views/Anime/AnimeDetail.cshtml
+++ b/AnimeSite/Views/Anime/AnimeDetail.cshtml
@@ -11,7 +11,7 @@
                 <div class="breadcrumb__links">
                     <a href="./index.html"><i class="fa fa-home"></i> Anasayfa</a>
                     <a href="./categories.html">Animeler</a>
-                    <span>@Model.Name</span>
+                    <span>@Model.AnimeName</span>
                 </div>
             </div>
         </div>
@@ -30,7 +30,7 @@
                 <div class="col-lg-9">
                     <div class="anime__details__text">
                         <div class="anime__details__title">
-                            <h3>@Model.Name</h3>
+                            <h3>@Model.AnimeName</h3>
                             <span>@Model.JapanName</span>
                         </div>
                         <div class="anime__details__rating">
