--- a/AnimeSite/Views/Shared/Components/_CategoryList/Default.cshtml
+++ b/AnimeSite/Views/Shared/Components/_CategoryList/Default.cshtml
@@ -13,7 +13,7 @@
             @foreach (var item in Model)
             {
                 <div class="section-title">
-                    <h5><a style="color:white" href="/Anime/AnimeList">@item.Name</a></h5>
+                    <h5><a style="color:white" href="/Anime/AnimeList">@item.CategoryName</a></h5>
                 </div>
             }            
         </div>
