--- a/AnimeSite/Views/Anime/AnimeWatching.cshtml
+++ b/AnimeSite/Views/Anime/AnimeWatching.cshtml
@@ -1,4 +1,7 @@
-﻿@{
+﻿@model EntityLayer.DTO.AnimesDetailEpisode
+
+
+@{
     ViewData["Title"] = "AnimeWatching";
     Layout = "~/Views/Shared/_UILayout.cshtml";
 }
@@ -7,22 +10,22 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="breadcrumb__links">
-                    <a href="./index.html"><i class="fa fa-home"></i> Home</a>
-                    <a href="./categories.html">Categories</a>
-                    <a href="#">Romance</a>
-                    <span>Fate Stay Night: Unlimited Blade</span>
+                    <a href="/Anime/AnimeList/">Animeler</a>
+                    <a href="/Anime/AnimeDetail/@Model.AnimeId">@Model.AnimeName</a>
+                    <span>@Model.EpisodeName</span>
                 </div>
             </div>
         </div>
     </div>
 </div>
+
 <section class="anime-details spad">
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
                 <div class="anime__video__player">
-                    <video id="player" playsinline controls data-poster="./videos/anime-watch.jpg">
-                        <source src="videos/1.mp4" type="video/mp4" />
+                    <video id="player" playsinline controls data-poster="/anime-main/videos/anime-watch.jpg">
+                        <source src="@Model.Source" type="video/mp4" />
                         <track kind="captions" label="English captions" src="#" srclang="en" default />
                     </video>
                 </div>
@@ -32,87 +35,5 @@
 </section>
 
 
-
 @*Episode Comments Olarak Ayrılıcak*@
-<section class="anime-details spad">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-8">
-                <div class="anime__details__review">
-                    <div class="section-title">
-                        <h5>Reviews</h5>
-                    </div>
-                    <div class="anime__review__item">
-                        <div class="anime__review__item__pic">
-                            <img src="img/anime/review-1.jpg" alt="">
-                        </div>
-                        <div class="anime__review__item__text">
-                            <h6>Chris Curry - <span>1 Hour ago</span></h6>
-                            <p>
-                                whachikan Just noticed that someone categorized this as belonging to the genre
-                                "demons" LOL
-                            </p>
-                        </div>
-                    </div>
-                    <div class="anime__review__item">
-                        <div class="anime__review__item__pic">
-                            <img src="img/anime/review-2.jpg" alt="">
-                        </div>
-                        <div class="anime__review__item__text">
-                            <h6>Lewis Mann - <span>5 Hour ago</span></h6>
-                            <p>Finally it came out ages ago</p>
-                        </div>
-                    </div>
-                    <div class="anime__review__item">
-                        <div class="anime__review__item__pic">
-                            <img src="img/anime/review-3.jpg" alt="">
-                        </div>
-                        <div class="anime__review__item__text">
-                            <h6>Louis Tyler - <span>20 Hour ago</span></h6>
-                            <p>Where is the episode 15 ? Slow update! Tch</p>
-                        </div>
-                    </div>
-                    <div class="anime__review__item">
-                        <div class="anime__review__item__pic">
-                            <img src="img/anime/review-4.jpg" alt="">
-                        </div>
-                        <div class="anime__review__item__text">
-                            <h6>Chris Curry - <span>1 Hour ago</span></h6>
-                            <p>
-                                whachikan Just noticed that someone categorized this as belonging to the genre
-                                "demons" LOL
-                            </p>
-                        </div>
-                    </div>
-                    <div class="anime__review__item">
-                        <div class="anime__review__item__pic">
-                            <img src="img/anime/review-5.jpg" alt="">
-                        </div>
-                        <div class="anime__review__item__text">
-                            <h6>Lewis Mann - <span>5 Hour ago</span></h6>
-                            <p>Finally it came out ages ago</p>
-                        </div>
-                    </div>
-                    <div class="anime__review__item">
-                        <div class="anime__review__item__pic">
-                            <img src="img/anime/review-6.jpg" alt="">
-                        </div>
-                        <div class="anime__review__item__text">
-                            <h6>Louis Tyler - <span>20 Hour ago</span></h6>
-                            <p>Where is the episode 15 ? Slow update! Tch</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="anime__details__form">
-                    <div class="section-title">
-                        <h5>Your Comment</h5>
-                    </div>
-                    <form action="#">
-                        <textarea placeholder="Your Comment"></textarea>
-                        <button type="submit"><i class="fa fa-location-arrow"></i> Review</button>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
+@await Component.InvokeAsync("_EpisodeComments",new {id=ViewBag.i});
