--- a/AnimeSite/Views/LayoutPartial/_NavbarPartial.cshtml
+++ b/AnimeSite/Views/LayoutPartial/_NavbarPartial.cshtml
@@ -14,8 +14,8 @@
                         <ul>
                             <li><a href="/Dashboard/Index/">Ana Sayfa</a></li>
                             <li><a href="/Anime/AnimeList/">Animeler</a></li>
-                            <li><a href="#">Forum</a></li>
-                            <li><a href="#">İletişim</a></li>
+                            <li><a href="#">Manga</a></li>
+                            <li><a href="#">Anime Haberleri</a></li>
                         </ul>
                     </nav>
                 </div>
