--- a/AnimeSite/Views/LayoutPartial/_NavbarPartial.cshtml
+++ b/AnimeSite/Views/LayoutPartial/_NavbarPartial.cshtml
@@ -13,7 +13,7 @@
                     <nav class="header__menu mobile-menu">
                         <ul>
                             <li><a href="/Dashboard/Index/">Ana Sayfa</a></li>
-                            <li><a href="#">Tavsiye Robotu</a></li>
+                            <li><a href="/RecomRobot/Index/">Tavsiye Robotu</a></li>
                             <li><a href="/Anime/AnimeList/">Animeler</a></li>
                             <li><a href="#">Manga</a></li>
                             <li><a href="#">Anime Haberleri</a></li>
